<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".25" />

    <!--    Left Box    -->
    <LinearLayout
        android:id="@+id/leftLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="4dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal"
        app:layout_constraintEnd_toEndOf="@id/guidelineVertical"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/fahrenheitLbl"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center|end"
            android:text="@string/fahrenheitLblText"
            android:textAlignment="gravity"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/celsiusLbl"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center|end"
            android:text="@string/celsiusLblText"
            android:textAlignment="gravity"
            android:textSize="18sp" />

    </LinearLayout>

    <!--    Right Box   -->
    <LinearLayout
        android:id="@+id/rightLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/fahrenheitInput"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/fahrenheitHint"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:text="@string/fahrenheitInputText" />

        <EditText
            android:id="@+id/celsiusInput"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/celsiusHint"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:text="@string/celsiusInputText" />
    </LinearLayout>

    <Button
        android:id="@+id/convertBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="150dp"
        android:text="@string/convertBtnLbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leftLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>